--- a/paper/references.bib
+++ b/paper/references.bib
@@ -6,3 +6,42 @@
     year = {2023},
     url = {https://www.R-project.org/},
   }
+
+@misc{ipumsusa,
+  doi = {10.18128/D010.V15.0},
+  url = {https://usa.ipums.org},
+  author = {Ruggles,  Steven and Flood,  Sarah and Sobek,  Matthew and Backman,  Daniel and Chen,  Annie and Cooper,  Grace and Richards,  Stephanie and Rodgers,  Renae and Schouweiler,  Megan},
+  language = {en},
+  title = {IPUMS USA: Version 15.0},
+  publisher = {Minneapolis,  MN: IPUMS},
+  year = {2024}
+}
+
+  @Article{tidyverse,
+    title = {Welcome to the {tidyverse}},
+    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+    year = {2019},
+    journal = {Journal of Open Source Software},
+    volume = {4},
+    number = {43},
+    pages = {1686},
+    doi = {10.21105/joss.01686},
+  }
+
+  @Manual{janitor,
+    title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+    author = {Sam Firke},
+    year = {2023},
+    note = {R package version 2.2.0},
+    url = {https://CRAN.R-project.org/package=janitor},
+  }
+
+  @InCollection{knitr,
+    booktitle = {Implementing Reproducible Computational Research},
+    editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+    title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+    author = {Yihui Xie},
+    publisher = {Chapman and Hall/CRC},
+    year = {2014},
+    note = {ISBN 978-1466561595},
+  }
