--- a/paper/references.bib
+++ b/paper/references.bib
@@ -29,7 +29,7 @@
   }
 
   @Manual{janitor,
-    title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+    title = {{janitor: Simple Tools for Examining and Cleaning Dirty Data}},
     author = {Sam Firke},
     year = {2023},
     note = {R package version 2.2.0},
@@ -39,7 +39,7 @@
   @InCollection{knitr,
     booktitle = {Implementing Reproducible Computational Research},
     editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
-    title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+    title = {{knitr: A Comprehensive Tool for Reproducible Research in {R}}},
     author = {Yihui Xie},
     publisher = {Chapman and Hall/CRC},
     year = {2014},
